[gd_scene load_steps=3 format=3 uid="uid://b62hga426axqb"]

[ext_resource type="Script" path="res://in_game_menu.gd" id="1_0k4el"]
[ext_resource type="Script" path="res://PlayerUI.gd" id="2_1635k"]

[node name="InGameMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0k4el")

[node name="PlayerUI" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_1635k")

[node name="PanelContainer" type="PanelContainer" parent="PlayerUI"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -127.0
offset_top = -40.0
grow_horizontal = 0
grow_vertical = 0

[node name="HBoxContainer" type="HBoxContainer" parent="PlayerUI/PanelContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PlayerUI/PanelContainer/HBoxContainer"]
layout_mode = 2
text = "Dig"

[node name="DigBar" type="ProgressBar" parent="PlayerUI/PanelContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(97.395, 25.565)
layout_mode = 2
size_flags_vertical = 4
value = 100.0
show_percentage = false

[node name="MatchEndScreen" type="PanelContainer" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = -69.0
offset_right = 64.0
offset_bottom = 69.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_lock_ = true
metadata/_edit_group_ = true

[node name="MarginContainer" type="MarginContainer" parent="MatchEndScreen"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MatchEndScreen/MarginContainer"]
layout_mode = 2

[node name="YouWon" type="Label" parent="MatchEndScreen/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "You Won!!!"
horizontal_alignment = 1

[node name="YouLost" type="Label" parent="MatchEndScreen/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "You lost..."
horizontal_alignment = 1

[node name="TimeLabel" type="Label" parent="MatchEndScreen/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "
Disconnecting in
6 seconds..."
horizontal_alignment = 1
